tests/semantic/valid/expressions/test_arithmetic.src
fn main() -> int {
    int a = 10;
    int b = 20;
    int c = 5;
    int d = (a + b) * c - 10;
    return d;
}