tests/semantic/invalid/scope_errors/test_undeclared_variable.src
fn main() -> int {
    int x = y;
    return x;
}